# newsletter

./: .dockerignore  .example.env  Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: general.yml
.sqlx/: query-8c0dc35d5deb3b0888b84f2490e159e5d5a601a9967222f19877dee27db4dbbc.json
config/: base.yaml
migrations/: 20240419170022_create_subscriptions_table.down.sql  20240419170022_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/data/: subscriptions.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/handlers/: mod.rs  subscriptions.rs
src/providers/: email.rs  mod.rs
src/routes/: general.rs
tests/: health.rs
tests/api/: health.rs  helpers.rs  main.rs  subscription.rs
